--- a/RN_Feature/ios/Podfile
+++ b/RN_Feature/ios/Podfile
@@ -8,6 +8,8 @@ target 'RN_Feature' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'react-native-maps', :path => '../node_modules/react-native-maps'
+
   target 'RN_FeatureTests' do
     inherit! :complete
     # Pods for testing
